<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.roboticarmhandapp.Home"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/hand"
        android:name="com.example.roboticarmhandapp.Hand"
        android:label="@string/title_hand"
        tools:layout="@layout/fragment_hand" />

    <fragment
        android:id="@+id/arm"
        android:name="com.example.roboticarmhandapp.Arm"
        android:label="@string/title_arm"
        tools:layout="@layout/fragment_arm" />

</navigation>