<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Hand">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/HandAngleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/angleMoteurTxt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/HandAngleIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/HandSeekBar"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/closeHandButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/closeHand"
            android:textAlignment="center" />

        <Button
            android:id="@+id/openHandButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/openHand" />

    </LinearLayout>

    <TextView
        android:id="@+id/HandArduinoConnectedTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/arduinoDisconnected"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


</LinearLayout>